--- a/css/scss/components/_global.scss
+++ b/css/scss/components/_global.scss
@@ -64,7 +64,8 @@ body {
   position: relative;
   width: 100%;
   margin: 0 auto;
-  padding: 60px 0 20px;
+  padding: 80px 0 20px;
+  min-height: 100vh;
 }
 
 .flex-center {
