--- a/css/scss/components/_services.scss
+++ b/css/scss/components/_services.scss
@@ -2,4 +2,85 @@
 
 .services {
   width: 100%;
+
+  &-wrapper {
+    width: 100%;
+  }
+
+  &-description {
+    font-size: 30px;
+    margin-bottom: 50px;
+  }
+
+  &-list {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(225px, 1fr));
+    width: 100%;
+    gap: 20px;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+
+  &-container {
+    width: 100%;
+    background-color: green;
+
+    & .service-card {
+
+
+      & i {
+
+      }
+
+      & h3 {
+
+      }
+
+      & .learn-more-btn {
+
+
+        & i {
+
+        }
+      }
+    }
+
+    & .service-modal {
+
+
+      &-body {
+
+
+        & i {
+
+        }
+
+        & h3 {
+
+        }
+
+        & h4 {
+
+        }
+
+        & p {
+
+        }
+
+        & h4:last-child {
+
+        }
+
+        & ul {
+
+          & li {
+
+            & i {
+
+            }
+          }
+        }
+      }
+    }
+  }
 }
