--- a/css/style.css
+++ b/css/style.css
@@ -71,7 +71,8 @@ body {
   position: relative;
   width: 100%;
   margin: 0 auto;
-  padding: 60px 0 20px;
+  padding: 80px 0 20px;
+  min-height: 100vh;
 }
 
 .flex-center {
@@ -175,6 +176,7 @@ body {
   align-items: center;
   gap: 30px;
   margin-bottom: 20px;
+  min-height: 80vh;
 }
 .home .media-icons {
   display: flex;
@@ -297,6 +299,9 @@ body {
   font-size: 14px;
 }
 
+.skills .inner-content {
+  width: 100%;
+}
 .skills-description {
   width: 100%;
   max-width: 700px;
@@ -311,15 +316,13 @@ body {
 }
 .skills-info {
   width: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
   gap: 21px;
   margin-bottom: 24px;
 }
 .skills .education {
-  min-width: 320px;
-  width: 32%;
+  width: 100%;
 }
 .skills .education .label {
   display: inline-block;
@@ -405,8 +408,7 @@ body {
   margin-bottom: 50px;
 }
 .skills .work-exp .experience-card {
-  min-width: 320px;
-  width: 32%;
+  width: 100%;
   background-color: #fff;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
   padding: 20px;
@@ -444,6 +446,29 @@ body {
   transform: scale(1.03);
   cursor: pointer;
   transition: 0.3s linear;
+}
+
+.services {
+  width: 100%;
+}
+.services-wrapper {
+  width: 100%;
+}
+.services-description {
+  font-size: 30px;
+  margin-bottom: 50px;
+}
+.services-list {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(225px, 1fr));
+  width: 100%;
+  gap: 20px;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+.services-container {
+  width: 100%;
+  background-color: green;
 }
 
 /*# sourceMappingURL=style.css.map */
