--- a/css/scss/components/_services.scss
+++ b/css/scss/components/_services.scss
@@ -2,4 +2,165 @@
 
 .services {
   width: 100%;
+
+  &-wrapper {
+    width: 100%;
+  }
+
+  &-description {
+    font-size: 30px;
+    margin-bottom: 50px;
+  }
+
+  &-list {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+    width: 100%;
+    gap: 20px;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+
+  &-container {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+    & .service-card {
+      background-color: v.$card-bg-color;
+      box-shadow: v.$box-shadow;
+      border-radius: 6px;
+      border-bottom: 3px solid v.$second-color;
+      padding: 50px;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      min-height: 280px;
+
+      & > i {
+        color: v.$second-color;
+        font-size: 47px;
+        margin-bottom: 20px;
+      }
+
+      & h3 {
+        font-size: 24px;
+        font-weight: 700;
+        line-height: 1.3;
+        margin-bottom: 20px;
+      }
+
+      & .learn-more-btn {
+        cursor: pointer;
+        color: v.$third-color;
+        transition: .3s linear;
+
+        & i {
+          margin-left: 5px;
+          transition: .3s linear;
+        }
+      }
+
+      &:hover {
+        & .learn-more-btn {
+          cursor: pointer;
+          color: v.$third-color;
+          transition: .3s linear;
+
+          & i {
+            transform: translateX(10px);
+            transition: .3s linear;
+          }
+        }
+      }
+    }
+
+    & .service-modal {
+      position: fixed;
+      z-index: 50;
+      padding: 20px;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      width: 100%;
+      height: 100vh;
+      backdrop-filter: blur(10px);
+      background-color: v.$bg-transparent-color;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      visibility: hidden;
+      opacity: 0;
+      transition: visibility 0.3s linear, opacity 0.3s linear;
+
+      &-body {
+        position: relative;
+        width: 100%;
+        padding: 40px;
+        max-width: 600px;
+        background-color: v.$modal-bg-color;
+        box-shadow: v.$box-shadow;
+        border-radius: 10px;
+        transform: translateY(-50px);
+        transition: .5s linear;
+
+        & > i {
+          position: absolute;
+          top: 10px;
+          right: 10px;
+          font-size: 20px;
+          cursor: pointer;
+          padding: 10px;
+        }
+
+        & h3 {
+          font-size: 30px;
+          font-weight: 700;
+          margin-bottom: 15px;
+        }
+
+        & h4 {
+          font-size: 20px;
+          font-weight: 600;
+          margin-bottom: 10px;
+        }
+
+        & p {
+          margin-bottom: 20px;
+        }
+
+        & h4:nth-last-of-type(1) {
+          font-size: 18px;
+        }
+
+        & ul {
+
+          & li {
+            margin-bottom: 8px;
+
+            & i {
+              color: v.$second-color;
+              margin-right: 5px;
+            }
+
+            &:last-child {
+              margin-bottom: 0;
+            }
+          }
+        }
+      }
+
+      &.active {
+        visibility: visible;
+        opacity: 1;
+        transition: visibility 0.3s linear, opacity 0.3s linear;
+
+        & .service-modal-body {
+          transform: translateY(0);
+        }
+      }
+    }
+  }
 }
