--- a/css/style.css
+++ b/css/style.css
@@ -71,7 +71,8 @@ body {
   position: relative;
   width: 100%;
   margin: 0 auto;
-  padding: 60px 0 20px;
+  padding: 80px 0 20px;
+  min-height: 100vh;
 }
 
 .flex-center {
@@ -175,6 +176,7 @@ body {
   align-items: center;
   gap: 30px;
   margin-bottom: 20px;
+  min-height: 80vh;
 }
 .home .media-icons {
   display: flex;
@@ -297,6 +299,9 @@ body {
   font-size: 14px;
 }
 
+.skills .inner-content {
+  width: 100%;
+}
 .skills-description {
   width: 100%;
   max-width: 700px;
@@ -311,15 +316,13 @@ body {
 }
 .skills-info {
   width: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
   gap: 21px;
   margin-bottom: 24px;
 }
 .skills .education {
-  min-width: 320px;
-  width: 32%;
+  width: 100%;
 }
 .skills .education .label {
   display: inline-block;
@@ -405,8 +408,7 @@ body {
   margin-bottom: 50px;
 }
 .skills .work-exp .experience-card {
-  min-width: 320px;
-  width: 32%;
+  width: 100%;
   background-color: #fff;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
   padding: 20px;
@@ -444,6 +446,143 @@ body {
   transform: scale(1.03);
   cursor: pointer;
   transition: 0.3s linear;
+}
+
+.services {
+  width: 100%;
+}
+.services-wrapper {
+  width: 100%;
+}
+.services-description {
+  font-size: 30px;
+  margin-bottom: 50px;
+}
+.services-list {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+  width: 100%;
+  gap: 20px;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+.services-container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.services-container .service-card {
+  background-color: #fff;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+  border-radius: 6px;
+  border-bottom: 3px solid #6a59d1;
+  padding: 50px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  min-height: 280px;
+}
+.services-container .service-card > i {
+  color: #6a59d1;
+  font-size: 47px;
+  margin-bottom: 20px;
+}
+.services-container .service-card h3 {
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 1.3;
+  margin-bottom: 20px;
+}
+.services-container .service-card .learn-more-btn {
+  cursor: pointer;
+  color: #777;
+  transition: 0.3s linear;
+}
+.services-container .service-card .learn-more-btn i {
+  margin-left: 5px;
+  transition: 0.3s linear;
+}
+.services-container .service-card:hover .learn-more-btn {
+  cursor: pointer;
+  color: #777;
+  transition: 0.3s linear;
+}
+.services-container .service-card:hover .learn-more-btn i {
+  transform: translateX(10px);
+  transition: 0.3s linear;
+}
+.services-container .service-modal {
+  position: fixed;
+  z-index: 50;
+  padding: 20px;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100vh;
+  backdrop-filter: blur(10px);
+  background-color: rgba(0, 0, 0, 0.1);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0.3s linear, opacity 0.3s linear;
+}
+.services-container .service-modal-body {
+  position: relative;
+  width: 100%;
+  padding: 40px;
+  max-width: 600px;
+  background-color: #fff;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+  transform: translateY(-50px);
+  transition: 0.5s linear;
+}
+.services-container .service-modal-body > i {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 20px;
+  cursor: pointer;
+  padding: 10px;
+}
+.services-container .service-modal-body h3 {
+  font-size: 30px;
+  font-weight: 700;
+  margin-bottom: 15px;
+}
+.services-container .service-modal-body h4 {
+  font-size: 20px;
+  font-weight: 600;
+  margin-bottom: 10px;
+}
+.services-container .service-modal-body p {
+  margin-bottom: 20px;
+}
+.services-container .service-modal-body h4:nth-last-of-type(1) {
+  font-size: 18px;
+}
+.services-container .service-modal-body ul li {
+  margin-bottom: 8px;
+}
+.services-container .service-modal-body ul li i {
+  color: #6a59d1;
+  margin-right: 5px;
+}
+.services-container .service-modal-body ul li:last-child {
+  margin-bottom: 0;
+}
+.services-container .service-modal.active {
+  visibility: visible;
+  opacity: 1;
+  transition: visibility 0.3s linear, opacity 0.3s linear;
+}
+.services-container .service-modal.active .service-modal-body {
+  transform: translateY(0);
 }
 
 /*# sourceMappingURL=style.css.map */
